; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_utftype.c_jsU_isalpharune.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_utftype.c_jsU_isalpharune.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__alpha2 = common dso_local global i32 0, align 4
@__alpha1 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @isalpharune(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64*, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = call i64 @isupperrune(i64 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %12, label %8

8:                                                ; preds = %1
  %9 = load i64, i64* %3, align 8
  %10 = call i64 @islowerrune(i64 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %8, %1
  store i32 1, i32* %2, align 4
  br label %51

13:                                               ; preds = %8
  %14 = load i64, i64* %3, align 8
  %15 = load i32, i32* @__alpha2, align 4
  %16 = load i32, i32* @__alpha2, align 4
  %17 = call i32 @nelem(i32 %16)
  %18 = sdiv i32 %17, 2
  %19 = call i64* @bsearch(i64 %14, i32 %15, i32 %18, i32 2)
  store i64* %19, i64** %4, align 8
  %20 = load i64*, i64** %4, align 8
  %21 = icmp ne i64* %20, null
  br i1 %21, label %22, label %35

22:                                               ; preds = %13
  %23 = load i64, i64* %3, align 8
  %24 = load i64*, i64** %4, align 8
  %25 = getelementptr inbounds i64, i64* %24, i64 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp sge i64 %23, %26
  br i1 %27, label %28, label %35

28:                                               ; preds = %22
  %29 = load i64, i64* %3, align 8
  %30 = load i64*, i64** %4, align 8
  %31 = getelementptr inbounds i64, i64* %30, i64 1
  %32 = load i64, i64* %31, align 8
  %33 = icmp sle i64 %29, %32
  br i1 %33, label %34, label %35

34:                                               ; preds = %28
  store i32 1, i32* %2, align 4
  br label %51

35:                                               ; preds = %28, %22, %13
  %36 = load i64, i64* %3, align 8
  %37 = load i32, i32* @__alpha1, align 4
  %38 = load i32, i32* @__alpha1, align 4
  %39 = call i32 @nelem(i32 %38)
  %40 = call i64* @bsearch(i64 %36, i32 %37, i32 %39, i32 1)
  store i64* %40, i64** %4, align 8
  %41 = load i64*, i64** %4, align 8
  %42 = icmp ne i64* %41, null
  br i1 %42, label %43, label %50

43:                                               ; preds = %35
  %44 = load i64, i64* %3, align 8
  %45 = load i64*, i64** %4, align 8
  %46 = getelementptr inbounds i64, i64* %45, i64 0
  %47 = load i64, i64* %46, align 8
  %48 = icmp eq i64 %44, %47
  br i1 %48, label %49, label %50

49:                                               ; preds = %43
  store i32 1, i32* %2, align 4
  br label %51

50:                                               ; preds = %43, %35
  store i32 0, i32* %2, align 4
  br label %51

51:                                               ; preds = %50, %49, %34, %12
  %52 = load i32, i32* %2, align 4
  ret i32 %52
}

declare dso_local i64 @isupperrune(i64) #1

declare dso_local i64 @islowerrune(i64) #1

declare dso_local i64* @bsearch(i64, i32, i32, i32) #1

declare dso_local i32 @nelem(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
